# todo-app

./: .gitattributes  .gitignore  LICENSE  README.md  db.sh  db.sql  flake.nix  haskell-flake-hello.cabal  hie.yaml  justfile  todo-app.cabal
.github/workflows/: ci.yaml
nix/: devshell.nix  integration-test.nix  nixpkgs.nix  process-compose.nix  scripts.nix  todo-app-services.nix  todo-app.nix
nix/services/: default.nix  postgres.nix  postgrest.nix
src/: Main.hs  Request.hs
src/TodoApp/: Request.hs
tutorial/nixify/: 1_flake.md  1_nix_flake.md
