cabal-version:      3.0
name:               todo-app
version:            0.1
synopsis:           TODO app using req (http-client library)
description:
  This TODO app is implemented using req to make http requests to postgrest,
  which is a webserver that converts your PostgreSQL database into a RESTful API.
  This approach has been taken to simplify the Haskell implementation and to
  demonstrate how dependendent services (in this case, postgrest is dependendent
  on PostgreSQl) can be started in nix using process-compose-flake
  (https://github.com/Platonic-Systems/process-compose-flake).

license:            MIT
copyright:          Copyright (c) 2023 Juspay
maintainer:         shivaraj.bh@juspay.in
author:             Shivaraj B H
category:           Introduction
homepage:           https://github.com/juspay/todo-app
bug-reports:        https://github.com/juspay/todo-app/issues
tested-with:        GHC ==9.2.6 || ==9.2.7

source-repository head
  type:     git
  location: https://github.com/juspay/todo-app

extra-source-files:
  LICENSE
  README.md

executable todo-app
  other-modules:      TodoApp.Request
  main-is:            Main.hs
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    KindSignatures
    OverloadedStrings
    OverloadedStrings
    ScopedTypeVariables

  build-depends:
    , aeson
    , base
    , boxes
    , bytestring
    , http-client
    , modern-uri
    , optparse-applicative
    , req
    , text
    , vector
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010
